--- a/pom.xml
+++ b/pom.xml
@@ -87,18 +87,32 @@
 	</build>
 	
 	<dependencies>
+<!-- 	
 		<dependency>
 			<groupId>dom4j</groupId>
 			<artifactId>dom4j</artifactId>
 			<version>1.6.1</version>
 			<scope>compile</scope>
+			<exclusions>
+				<exclusion>
+				  <groupId>xml-apis</groupId>
+				  <artifactId>xml-apis</artifactId>
+				</exclusion>
+			</exclusions>			
 		</dependency>
 		<dependency>
 			<groupId>jaxen</groupId>
 			<artifactId>jaxen</artifactId>
 			<version>1.1.1</version>
 			<scope>compile</scope>
+			<exclusions>
+				<exclusion>
+				  <groupId>xml-apis</groupId>
+				  <artifactId>xml-apis</artifactId>
+				</exclusion>
+			</exclusions>			
 		</dependency>
+-->		
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
@@ -146,11 +160,22 @@
             <artifactId>velocity</artifactId>
             <version>1.7</version>
         </dependency>
+		<dependency>
+		    <groupId>org.apache.velocity</groupId>
+		    <artifactId>velocity-tools</artifactId>
+		    <version>2.0</version>
+		</dependency>
 <!--         
         <dependency>
             <groupId>org.freemarker</groupId>
             <artifactId>freemarker</artifactId>
             <version>2.3.20</version>
+        </dependency>
+        <dependency>
+            <groupId>org.antlr</groupId>
+            <artifactId>Stri</artifactId>
+            <artifactId>ST4</artifactId>
+            <version>4.0.8</version>
         </dependency>
 -->        
         <dependency>
@@ -158,6 +183,7 @@
             <artifactId>stringtemplate</artifactId>
             <version>4.0.2</version>
         </dependency>
+        
 		<dependency>
 			<groupId>org.apache.ant</groupId>
 			<artifactId>ant</artifactId>
